--- a/packages/commitlint-config/package.json
+++ b/packages/commitlint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zhrx-commit-lint",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "main": "index.js",
   "description": "zhrx Git规范",
   "keywords": [
@@ -16,5 +16,6 @@
   },
   "dependencies": {
     "conventional-changelog-conventionalcommits": "^4.5.0"
-  }
+  },
+  "gitHead": "602466d1dc6aa42567a7cc32a6fc2ec27e39bb44"
 }
